<resources>
    <string name="app_name">TDLLY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Api_key">AIzaSyDZDfDu-npZxpvUkfx4hbPwCHC5dctS7Q0</string>
    <string name="address">Address</string>
    <string name="phone">(+country key)Phone</string>
    <string name="ads_content">Ads content</string>
    <string name="add_image">Add photo</string>
    <string name="add_ads">Add ads</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact us</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="Login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_pass">Forget password ?</string>
    <string name="create_account">Create an account</string>
    <string name="my_ads">My ads</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="city">City</string>
    <string name="f_name">First name</string>
    <string name="l_name">Last name</string>
    <string name="re_password">Re-type password</string>
    <string name="location">Location</string>
    <string name="accept_rule">Approve the terms and conditions</string>
    <string name="search">search</string>
    <string name="result">Search Results</string>
    <string name="trans_money">Transfer commission</string>
    <string name="money">Amount of commission</string>
    <string name="trans_bank">The bank that has been transferred</string>
    <string name="trans_date">Transfer date</string>
    <string name="day">Day</string>
    <string name="ads_num">Ads number</string>
    <string name="new_ads">New</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="sold">Item was sold</string>
    <string name="undo_ads">Undo the ad</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="update_pass">Update password</string>
    <string name="curr_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="re_pass">Re-type new password</string>
    <string name="adding_ads">Adding new ad</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_ad_content">Enter ad content</string>
    <string name="sel_image">select images</string>
    <string name="choose_6_image">Enter 6 Images</string>
    <string name="enter_sub">Enter subject</string>
    <string name="enter_msg">Enter message</string>
    <string name="logging">Login...</string>
    <string name="enter_un">Enter username</string>
    <string name="enter_pass">Enter password</string>
    <string name="curr">Current</string>
    <string name="prev">Previous</string>
    <string name="updating_prof">Updating profile...</string>
    <string name="cnt_find_loc">can\'t find your location</string>
    <string name="creating_account">Creating new account...</string>
    <string name="locating">Locating...</string>
    <string name="enter_fn">Enter first name</string>
    <string name="enter_ln">Enter last name</string>
    <string name="enter_phone">Enter phone</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="enter_email">Enter email</string>
    <string name="inv_email">Invalid email</string>
    <string name="enter_re_pass">Re-type password</string>
    <string name="pass_notmath">password not match</string>
    <string name="ch_per_img">Choose your image</string>
    <string name="enter_loc">Enter Location</string>
    <string name="ch_new_date">Choose new date</string>
    <string name="enter_money">Enter transfer commission</string>
    <string name="ch_date">Choose date</string>
    <string name="enter_adsnum">Enter ad number</string>
    <string name="transfering_comm">Transfer commission...</string>
    <string name="upd_name">Update name</string>
    <string name="upd_email">Update email</string>
    <string name="upd_phone">Update phone</string>
    <string name="upd_city">Update city</string>
    <string name="deleting">Deleting ad...</string>
    <string name="wdel">will be deleted</string>
    <string name="item">item</string>
    <string name="numitem_delete">The number of items to be deleted</string>
    <string name="updating_pass">Updating password...</string>
    <string name="enter_curr_pass">Enter current password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="re_new_pass">Re-type new password</string>
    <string name="something">Something went haywire</string>
    <string name="userexist">Username already exist</string>
    <string name="reg_error">Error while registering</string>
    <string name="logging_out">Logout...</string>
    <string name="user_pass_error">username or password incorrect</string>
    <string name="wtsnotins">WhatsApp not install</string>
    <string name="recover_pass">Recover your account.We will send you a link to change your password</string>
    <string name="reset_password">Reset password</string>
    <string name="resetmsg_success">Done. A message will be sent by email. Please check your email to add the new password</string>
    <string name="u_e_incorrect">username or email incorrect</string>
    <string name="error">Error try again later</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_city">Enter city</string>
    <string name="about_app">About App</string>
    <string name="inv_old_pass">Invalid old password</string>
    <string name="price">Price</string>
    <string name="congrat">Congratulation</string>
    <string name="cong_msg">Congratulations, you get a 10% discount for any item in the application. Take a picture of the screen and when you buy, send the picture to the administration so that we can contact the advertiser</string>
    <string name="mobile_not">Connect by app only (mobile number not shown to customers)</string>
    <string name="max_img_note">Max 6 images. Scroll to add more photos.</string>
    <string name="attach_image">Attach a copy of the money transfer</string>
    <string name="ad_details">Ad details</string>
    <string name="next">Next</string>
    <string name="agree">agree</string>
    <string name="dis_agree">not agree</string>
    <string name="enter_location">Set your location</string>
    <string name="enter_price">Enter price</string>
    <string name="ch_ad_imgs">Choose ad Images</string>
    <string name="no_dept">There are no department to display</string>
    <string name="no_branch">There is no branch</string>
    <string name="dept">Department</string>
    <string name="branch">Branch</string>
    <string name="ad_name">Ad name</string>
    <string name="enter_ad_name">Enter Ad name</string>
    <string name="ads_added">Ad successfully added</string>
    <string name="ch_ad_type">choose ad type</string>
    <string name="used">Used</string>
    <string name="no_ads">There are no ads to display</string>
    <string name="no_img">There are no images to display</string>
    <string name="noreg_without_rules">You can not log in without agreeing to the terms and conditions</string>
    <string name="upd_username">Update Username</string>
    <string name="pass_upd_success">Password successfully updated</string>
    <string name="name_upd_succ">Name successfully updated</string>
    <string name="email_upd_succ">Email successfully updated</string>
    <string name="phone_succ_update">Phone successfully updated</string>
    <string name="city_updated">city successfully updated</string>
    <string name="un_updated">Username updated successfully</string>
    <string name="upd_ad">Update ad</string>
    <string name="press_long">Press and hold to take a picture</string>
    <string name="loc_deter">Your location determined</string>
    <string name="Ad_type">Ad type</string>
    <string name="nobranch_to_dept">There is no branch for this department</string>
    <string name="isSell">Sold</string>
    <string name="updating_ad">Updating ad...</string>
    <string name="ad_upd_succ">ad successfully updated</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="tm">Type a message...</string>
    <string name="messaging">Messaging</string>
    <string name="del_all">Delete All</string>
    <string name="ch_dept">Choose department</string>
    <string name="ch_branch">Choose branch</string>
    <string name="rules">Rules</string>
    <string name="logout">Logout</string>
    <string name="msg">Messages</string>
    <string name="sending_msg">Sending message...</string>
    <string name="km">Km</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="bank">Bank</string>
    <string name="sel_reason">Select reason</string>
    <string name="trans_success">Transfer successfully</string>
    <string name="there_are_no_messages_to_display">There are no messages to display</string>
    <string name="no_chat">There are no conversations to display</string>
    <string name="msg_sent">Message successfully sent</string>
    <string name="deleting_msg">Deleting messages...</string>
    <string name="del_success">Messages successfully deleted</string>
    <string name="del_this_msg">Delete this message ?</string>
    <string name="n_account">New Account</string>
    <string name="sugg">Suggested us</string>
    <string name="skip">Skip</string>
    <string name="ser_not_ava">This service is not available to visitors plz create an account</string>
    <string name="succ_reg">Successfully registered</string>
    <string name="visitor">Visitor</string>
    <string name="yes">yes</string>
    <string name="share">Share</string>
    <string name="all">All</string>
    <string name="all_ads">All Ads</string>
    <string name="msg_txt">Message</string>
    <string name="enter_proname">Enter product name</string>
    <string name="no_r">No Results</string>
    <string name="update_or_delete">update or delete</string>
    <string name="undefined">undefined</string>
    <string name="sorry">Sorry</string>
    <string name="sign_in_or_create_a_new_account_so_you_can_send_a_message_to_the_owner_of_the_ad">Sign in or create a new account so you can send a message to the owner of the ad</string>
    <string name="new_account">Create new account</string>
    <string name="perm_read_denied">Read image permission denied</string>
    <string name="select_language">Select Language</string>
    <string name="change_language">Change language</string>
    <string name="wait">Wait...</string>
    <string name="cong_lottery">Congratulations you were in lottery</string>
    <string name="delete_image">Delete image ?</string>
    <string name="deltng">Deleting...</string>
    <string name="sar">SAR</string>
    <string name="nearby">Nearby</string>
    <string name="recent">Recent</string>
    <string name="pr_req">Price is required</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="choose_bank">Choose bank</string>
    <string name="lodng_bnks">Loading bank accounts...</string>
    <string name="select">Select</string>
    <string name="cancel3">Cancel</string>
    <string name="access_img_perm_denied">Access image permission denied</string>
    <string name="field_req">Field is required</string>
    <string name="nearme">Near me</string>
    <string name="newest">Newest</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="allow_tdlly_to_access_gps">Allow TDLLY to Access Gps</string>
    <string name="fetching_your_location">Fetching your location...</string>
</resources>