<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/congrat"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/cong_lottery"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"

        />

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/ok"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:background="#00000000"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>