<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"

    >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:drawableRight="@drawable/delete_icon"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/sellBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/white"
            android:textColor="@color/white"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/sold"
            android:layout_marginBottom="10dp"
            android:checked="false"

            />
        <RadioButton
            android:id="@+id/undoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/white"
            android:textColor="@color/white"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/undo_ads"
            android:layout_marginBottom="10dp"

            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:id="@+id/done"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:text="@string/ok"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:textColor="@color/gray1"
            android:text="@string/cancel"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>