<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ContactUsActivity"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:background="@color/bg"


    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/back"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/white_back_arrow"
                    android:padding="18dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/trans_money"
                    />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_below="@+id/appBar"
        android:layout_above="@+id/send_btn"
        android:fillViewport="true"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"

            >
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingLeft="5dp"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:hint="@string/name"
                android:paddingRight="5dp"
                android:textColorHint="@color/black"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textSize="15sp"
                android:background="@drawable/et_bg_trans"
                android:gravity="center_vertical|right"

                />
            <EditText
                android:id="@+id/mony"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:hint="@string/money"
                android:paddingRight="5dp"
                android:textColorHint="@color/black"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textSize="15sp"
                android:background="@drawable/et_bg_trans"
                android:gravity="center_vertical|right"


                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trans_bank"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_bank"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/choose_bank"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_bg_trans"
                android:gravity="center"
                android:paddingRight="5dp"
                android:layout_marginBottom="10dp"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/trans_date"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/day"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_bg_trans"
                android:gravity="center_vertical|right"
                android:paddingRight="5dp"
                android:layout_marginBottom="10dp"

                />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingLeft="5dp"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:hint="@string/phone"
                android:textColorHint="@color/black"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textSize="15sp"
                android:background="@drawable/et_bg_trans"
                android:paddingRight="5dp"
                android:gravity="center_vertical|right"




                />
            <EditText
                android:id="@+id/ads_id"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingLeft="5dp"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:hint="@string/ads_num"
                android:textColorHint="@color/black"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:inputType="number"
                android:textSize="15sp"
                android:background="@drawable/et_bg_trans"
                android:paddingRight="5dp"
                android:gravity="center_vertical|right"


                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="1"
                >
                <ImageView
                    android:id="@+id/upload"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/upload_icon"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="@color/gray0"
                    android:text="@string/attach_image"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/imgs_bg"
                android:scaleType="centerCrop"
                android:layout_marginRight="5dp"
                app:siBorderAlpha="0"
                app:siBorderWidth="0dp"
                app:siRadius="10dp"
                app:siBorderColor="@android:color/transparent"
                android:layout_gravity="center_vertical|right"
                />
            <Button
                android:id="@+id/send_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/dark_btn_bg"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/send"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                />


        </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>