<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:scrollbars="none"

    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activities.LoginActivity"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/empty_logo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Login"
                android:textSize="14sp"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="20dp"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ed_login"
                android:hint="@string/username"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:drawableRight="@drawable/user_icon"
                android:drawablePadding="5dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:singleLine="true"

                />
            <EditText
                android:id="@+id/user_password"

                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ed_login"
                android:hint="@string/password"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:drawableRight="@drawable/pass_icon"
                android:drawablePadding="5dp"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/white"


                />
            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/forget_pass"
                android:textStyle="bold"
                android:textSize="14sp"

                />
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/Login"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"

            >
            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/create_account"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                />
            <Button
                android:id="@+id/skip"
                android:layout_width="120dp"
                android:layout_height="37dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:background="@drawable/skip_btn"
                android:text="@string/skip"

                />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>